<?xml version="1.0"?>
<package>
  <name>transferfile</name>
  <version>1.0.0</version>
  <description>The transferfile package</description>
  <maintainer email="pinkie.fu@ubtrobot.com">pinkie.fu</maintainer>
  <author email="pinkie.fu@ubtrobot.com">pinkie.fu</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>log</build_depend>
  <build_depend>utils</build_depend>
  <build_depend>config</build_depend>
  <build_depend>qiniu</build_depend>
  <build_depend>rtc</build_depend>
  <build_depend>atris_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>log</run_depend>
  <run_depend>utils</run_depend>
  <run_depend>config</run_depend>
  <run_depend>qiniu</run_depend>
  <run_depend>rtc</run_depend>
  <run_depend>atris_msgs</run_depend>
</package>
